# pd2-myitem

./: .vercelignore  current-update.txt  deployment-log.txt  index.html  package-lock.json  package.json
.github/workflows/: release-tauri.yml
app/: .env.example  .env.public.example  .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
app/data/: armor-family-map.json  pd2.sqlite  weapon-family-map.json
app/docs/: github-auto-update-runbook.md  local-exe-cloud-sync-design.md  status.md  supabase-owner-migration.sql  supabase-rls-owner.sql  supabase-rls.sql  supabase-schema.sql
app/scripts/: generate-tauri-icon.ps1  report-unique-images.mjs  sync-install-icons.mjs  tauri-env.cmd  update-installers.cmd  update-portable.cmd  verify-qr-flow.mjs
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  local_overlay_server.rs  main.rs
app/src/components/: d2-ui.css  d2-ui.tsx
app/src/data/: category-icon-map.json  filter-rules.json  icon-map.json  (+2 more)
docs/: 00-project-index.md  01-project-overview.md  02-requirements.md  03-architecture.md  04-development-roadmap.md  05-task-checklist.md
docs/api/: 50-local-api.md  51-route-structure.md
docs/assets/: 30-icon-strategy.md  31-icon-mapping-rules.md  32-unique-image-phase2.md
docs/data/: 10-json-spec.md  11-database-schema.md  12-parsing-rules.md  13-sample-items.md
docs/integration/: 00-intergration-index.md  40-obs-integration.md  41-discord-format.md  42-reddit-format.md  43-compact-format.md  44-clipboard-monitoring.md
docs/new/: filter.md  item.filter  items.json
docs/operations/: 60-release-plan.md  61-config-and-settings.md  62-security-and-sharing.md
docs/ui/: 20-overlay-ui.md  21-dashboard-ui.md  22-today-page-ui.md  23-qr-page-flow.md
releases/: latest.json
work/: README.md  _template.md  opencode-log.txt
work/2026-03/: 2026-03-07.md  2026-03-08.md
(+42 files in other folders)
