[package]
name = "pd2_broadcast_item_tracker"
version = "0.1.1"
description = "PD2 Broadcast Item Tracker desktop shell"
authors = ["pd2-team"]
license = "MIT"
edition = "2021"

[lib]
name = "pd2_broadcast_item_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
